- Fixed overflow decknames - some other changes

--- a/src/styles/views/CardOverview.scss
+++ b/src/styles/views/CardOverview.scss
@@ -47,6 +47,7 @@
         height: 318px;
         left: 383px;
         top: 282px;
+        align-content: center;
 
         background: #FFFFFF;
         border: 1px solid #000000;
@@ -71,9 +72,7 @@
     }
 
     &.card-Title2 {
-        position: absolute;
-        left: 30px;
-        top: 30px;
+        position: relative;
 
         font-family: 'Roboto', sans-serif;
         font-style: normal;
